third_party/move/move-compiler-v2/tests/match-checks/address_match_invalid.exp

Diagnostics:
error: unexpected token
  ┌─ tests/match-checks/address_match_invalid.move:4:13
  │
4 │             @0x1 => 1,
  │             ^
  │             │
  │             Unexpected '@'
  │             Expected a variable or struct or variant name
